--- a/CCS/DSK_P2/.settings/org.eclipse.core.resources.prefs
+++ b/CCS/DSK_P2/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//Debug/Source/asm/subdir_rules.mk=UTF-8
 encoding//Debug/Source/asm/subdir_vars.mk=UTF-8
 encoding//Debug/Source/c/subdir_rules.mk=UTF-8
 encoding//Debug/Source/c/subdir_vars.mk=UTF-8
+encoding//Debug/Source/reference/subdir_rules.mk=UTF-8
+encoding//Debug/Source/reference/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
